SystemIndices updates